Configured vite, pre-commit and pre-push

--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "prepare": "husky install",
+    "build:dev": "vite build --mode development",
+    "build:prod": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "lint:fix": "yarn lint:js:fix & yarn lint:css:fix & yarn prettier:fix",
+    "lint:js": "eslint src",
+    "lint:js:fix": "eslint --fix src",
+    "lint:css": "yarn lint:postcss & yarn lint:scss",
+    "lint:css:fix": "yarn lint:postcss --fix & yarn lint:scss --fix",
+    "lint:postcss": "stylelint src --custom-syntax postcss-html",
+    "lint:scss": "stylelint \"src/**/*.scss\"",
+    "prettier:fix": "prettier --write src/"
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -31,14 +39,25 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
+    "stylelint": "16.7.0",
+    "stylelint-config-recess-order": "5.0.1",
+    "stylelint-config-standard": "36.0.1",
+    "stylelint-config-standard-scss": "13.1.0",
+    "stylelint-order": "6.0.4",
+    "stylelint-scss": "6.4.1",
+    "postcss-html": "1.7.0",
+    "postcss-scss": "4.0.9",
     "cypress": "^13.12.0",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-vue": "^9.23.0",
+    "husky": "^9.1.6",
     "jsdom": "^24.1.0",
+    "lint-staged": "^15.2.10",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
     "start-server-and-test": "^2.0.4",
+    "terser": "^5.34.1",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vitest": "^1.6.0",
