--- a/package.json
+++ b/package.json
@@ -39,14 +39,6 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
-    "stylelint": "16.7.0",
-    "stylelint-config-recess-order": "5.0.1",
-    "stylelint-config-standard": "36.0.1",
-    "stylelint-config-standard-scss": "13.1.0",
-    "stylelint-order": "6.0.4",
-    "stylelint-scss": "6.4.1",
-    "postcss-html": "1.7.0",
-    "postcss-scss": "4.0.9",
     "cypress": "^13.12.0",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^3.3.0",
@@ -55,8 +47,17 @@
     "jsdom": "^24.1.0",
     "lint-staged": "^15.2.10",
     "npm-run-all2": "^6.2.0",
+    "postcss-html": "1.7.0",
+    "postcss-scss": "4.0.9",
     "prettier": "^3.2.5",
+    "sass": "^1.79.4",
     "start-server-and-test": "^2.0.4",
+    "stylelint": "16.7.0",
+    "stylelint-config-recess-order": "5.0.1",
+    "stylelint-config-standard": "36.0.1",
+    "stylelint-config-standard-scss": "13.1.0",
+    "stylelint-order": "6.0.4",
+    "stylelint-scss": "6.4.1",
     "terser": "^5.34.1",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
