--- a/.github/workflows/main-ci-cd.yml
+++ b/.github/workflows/main-ci-cd.yml
@@ -62,7 +62,7 @@ jobs:
         run: yarn
 
       - name: Build static files
-        run: yarn build:dev
+        run: yarn build:prod
 
       - name: Setup pages
         uses: actions/configure-pages@v3
