Configured CI/CD

--- a/.github/workflows/dev-ci-cd.yml
+++ b/.github/workflows/dev-ci-cd.yml
@@ -39,7 +39,7 @@ jobs:
 
   deploy:
     environment:
-      name: github-pages
+      name: dev
       url: ${{ steps.deployment.outputs.page_url }}
     needs: build-and-test
     runs-on: ubuntu-latest
