--- a/.github/workflows/test-ci-cd.yml
+++ b/.github/workflows/test-ci-cd.yml
@@ -42,7 +42,7 @@ jobs:
 
   deploy:
     environment:
-      name: github-pages
+      name: test
       url: ${{ steps.deployment.outputs.page_url }}
     needs: build-and-test
     runs-on: ubuntu-latest
